kubernetes/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-https
spec:
  parentRefs:
    - name: home-cloud
      namespace: gateway
      sectionName: https
  hostnames:
    - argocd.home.antonu.org
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-redirect
spec:
  parentRefs:
    - name: home-cloud
      namespace: gateway
      sectionName: http
  hostnames:
    - argocd.home.antonu.org
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
